# topcoat

./: Cargo.toml  README.md
crates/topcoat/: Cargo.toml
crates/topcoat-asset/: Cargo.toml  README.md
crates/topcoat-asset/src/: asset.rs  bundle.rs  error.rs  lib.rs  manifest.rs  options.rs  tower.rs  view.rs
crates/topcoat-asset/src/bundler/: mod.rs
crates/topcoat-axum/: Cargo.toml
crates/topcoat-cli/: Cargo.toml
crates/topcoat-cli/src/: cargo.rs
crates/topcoat-cli/src/asset/: bundle.rs  list.rs  mod.rs
crates/topcoat-cli/src/dev/: mod.rs
crates/topcoat-cli/src/fmt/: mod.rs
crates/topcoat-core/: Cargo.toml
crates/topcoat-core/src/context/: abort.rs  app_state.rs  memoize.rs  mod.rs  parts.rs  state.rs
crates/topcoat-interop/: Cargo.toml
crates/topcoat-interop/src/ast/expr/: expr_assign_deref.rs  expr_field.rs
crates/topcoat-interop/src/runtime/expr/: expr_assign_deref.rs  expr_closure.rs  expr_deref.rs  expr_field.rs  expr_lit.rs  expr_method_call.rs  expr_param.rs  expr_raw.rs  expr_signal_ref.rs  interpreter.rs  mod.rs
crates/topcoat-macro/: Cargo.toml
crates/topcoat-macro/src/: lib.rs  quote_option.rs
crates/topcoat-macro/src/component/: mod.rs
crates/topcoat-macro/src/layout/: mod.rs
crates/topcoat-macro/src/memoize/: mod.rs
crates/topcoat-macro/src/page/: mod.rs
crates/topcoat-macro/src/param/: mod.rs
crates/topcoat-macro/src/path_param/: mod.rs
crates/topcoat-macro/src/query_params/: mod.rs
crates/topcoat-macro/src/route/: mod.rs
crates/topcoat-macro/src/segment/: mod.rs  param.rs
crates/topcoat-pretty/src/: lib.rs  registry.rs
crates/topcoat-router/: Cargo.toml
crates/topcoat-router/src/: body.rs  context.rs  error.rs  fallback.rs  file_router.rs  layout.rs  lib.rs  page.rs  params.rs  path.rs  pattern.rs  query_params.rs  redirect.rs  request.rs  router.rs  segment.rs
crates/topcoat-router/src/error/: bad_request.rs  forbidden.rs  internal_server.rs  mod.rs  not_found.rs  redirect.rs  unauthorized.rs
crates/topcoat-router/src/file/: layout.rs  mod.rs  page.rs  router.rs  segment.rs
crates/topcoat-router/src/manual/: page.rs  route.rs  router.rs
crates/topcoat-router/src/module/: layout.rs  mod.rs  page.rs  router.rs  segment.rs
crates/topcoat-router/src/runtime/: endpoint.rs  layer.rs  path.rs  router.rs
crates/topcoat-runtime/: Cargo.toml
crates/topcoat-runtime/browser/src/: binding.ts  scan.ts
crates/topcoat-runtime/macro/: Cargo.toml
crates/topcoat-runtime/src/: bind_attribute.rs  event.rs  event_handler.rs  lib.rs
crates/topcoat-runtime/src/expr/: expr_assign_deref.rs  expr_closure.rs  expr_deref.rs  expr_field.rs  expr_lit.rs  expr_param.rs  expr_signal_ref.rs  mod.rs
crates/topcoat-runtime/src/runtime/: bind_attribute.rs  event_handler.rs
crates/topcoat-runtime/src/signal/: island.rs  mod.rs  (+1 more)
crates/topcoat-ui/registry/: Cargo.toml
crates/topcoat-view/: Cargo.toml
crates/topcoat-view/src/: lib.rs
crates/topcoat-view/tests/: pretty.rs
crates/topcoat/src/: dev.rs  lib.rs
docs/: IDEAS.md  app_state.md  component.md  file_router.md  functions_not_middlewares.md  memoization.md  module_router.md  router.md  source_formatting.md  view_macro.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
(+117 files in other folders)
