[package]
name = "topcoat-asset"
version = "0.1.0"
edition = "2024"

[features]
default = ["tower"]
tower = ["dep:http", "dep:tower-http", "dep:tower-service"]

[dependencies]
http = { workspace = true, optional = true }
memchr.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
toml.workspace = true
tower-http = { workspace = true, optional = true, features = ["fs"] }
tower-service = { workspace = true, optional = true }

[lints]
workspace = true
