[package]
name = "topcoat-interop"
version = "0.1.0"
edition = "2024"

[features]
parsing = []
pretty = ["dep:topcoat-pretty"]

[dependencies]
topcoat-pretty = { workspace = true, optional = true }

proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
quote.workspace = true

[lints]
workspace = true
