[package]
name = "topcoat-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
view = ["dep:topcoat-view"]
router = []
runtime = ["dep:topcoat-runtime"]

discover = []

[dependencies]
topcoat-runtime = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true, features = ["parsing"] }

heck.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
