[package]
name = "topcoat-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
interop = ["dep:topcoat-interop"]
view = ["dep:topcoat-view"]
router = []

discover = []

[dependencies]
topcoat-interop = { workspace = true, optional = true, features = ["parsing"] }
topcoat-view = { workspace = true, optional = true, features = ["parsing"] }

heck.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
